# soul-point

./: .dockerignore  .gitignore  Dockerfile  SETUP.md  package-lock.json  package.json  wrangler.jsonc
client/: index.html  package-lock.json  package.json  pup.mjs
client/src/: App.tsx  main.tsx
client/src/api/: client.ts  types.ts
client/src/components/common/: ChampPortrait.tsx  ItemSlot.tsx  OrnatePanel.tsx  RoleIcon.tsx  TierBadge.tsx  WinRateBar.tsx
client/src/components/layout/: Footer.tsx  NavBar.tsx  SearchBar.tsx
client/src/data/: builds.ts
client/src/hooks/: useChampionData.ts  useRuneData.ts
client/src/lib/: utils.ts
client/src/styles/: index.css  theme.css
client/src/views/: AnalyticsView.tsx  BuildsView.tsx  ChampionBuildSubPage.tsx  ChampionsView.tsx  HomeView.tsx  LeaderboardView.tsx  PatchView.tsx  ProfileView.tsx  SoulPointView.tsx  TierListView.tsx
lol-data-mcp/: CLAUDE.md  README.md  pyproject.toml  requirements.txt
lol-data-mcp/config/: data_sources.yaml  development_config.yaml  mcp_tools.yaml  production_config.yaml  server_config.yaml
lol-data-mcp/docs/: RECOMMENDATIONS.md  lol_data_mcp_server.md
lol-data-mcp/src/core/: __init__.py  config.py  environment_loader.py
lol-data-mcp/src/data_sources/scrapers/: __init__.py  base_scraper.py
lol-data-mcp/src/data_sources/scrapers/champions/: __init__.py  abilities_scraper.py  patch_note_scraper.py  stats_scraper.py
lol-data-mcp/src/data_sources/scrapers/items/: __init__.py  item_data_scraper.py  item_patch_scraper.py
lol-data-mcp/src/data_sources/scrapers/runes/: __init__.py  rune_data_scraper.py  rune_patch_scraper.py
lol-data-mcp/src/mcp_server/: README.md  mcp_handler.py  server.py  stdio_server.py  tools.py
lol-data-mcp/src/models/: __init__.py  data_models.py  exceptions.py  input_models.py
lol-data-mcp/src/services/: __init__.py
lol-data-mcp/src/services/champions/: __init__.py  abilities_service.py  patch_note_service.py  stats_service.py
lol-data-mcp/src/services/items/: __init__.py  item_patch_service.py  item_service.py
lol-data-mcp/src/services/runes/: __init__.py  rune_patch_service.py  rune_service.py
lol-data-mcp/tests/: test_rune_system.py
lol-data-mcp/tests/champions/: __init__.py  abilities_test.py  stats_test.py
lol-data-mcp/tests/mcp_server/: __init__.py  test_item_data_tool.py
lol-data-mcp/tests/scrapers/: __init__.py  items && powershell Move-Item test_item_scraper.py scrapersitems
lol-data-mcp/tests/scrapers/champions/: __init__.py
lol-data-mcp/tests/scrapers/items/: __init__.py  test_basic_functionality.py  test_fixes_validation.py  test_item_data_scraper.py  test_item_patch_scraper.py
lol-data-mcp/tests/services/items/: __init__.py  test_item_service.py
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/data/: build-stats.json  champion-positions.json  crawled-matches.json  last-key-hash.json
server/src/: algo.ts  crawl-monitor.html  crawler.ts  index.ts  lol-data-mcp.ts  opgg.ts  riot.ts
