[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-data-mcp-server"
version = "1.0.0"
description = "A comprehensive Model Context Protocol (MCP) server providing real-time, structured access to League of Legends game data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Project Taric Team", email = "tarik.estaed@gmail.com"}
]
keywords = ["mcp", "league-of-legends", "lol", "api", "server", "game-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "selenium>=4.15.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.7",
    "redis>=5.0.1",
    "alembic>=1.12.1",
    "riotwatcher>=3.2.5",
    "aiohttp>=3.9.0",
    "pandas>=2.1.3",
    "numpy>=1.24.4",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.3",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "factory-boy>=3.3.0",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/project-taric/lol-data-mcp-server"
Repository = "https://github.com/project-taric/lol-data-mcp-server.git"
Documentation = "https://github.com/project-taric/lol-data-mcp-server#readme"
"Bug Tracker" = "https://github.com/project-taric/lol-data-mcp-server/issues"

[project.scripts]
lol-mcp-server = "lol_data_mcp_server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["lol_data_mcp_server"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=lol_data_mcp_server --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 